Fri Feb 26 18:30:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_sys_time.inl:
          Changed ACE_HAS_CLOCK_REALTIME to ACE_HAS_CLOCK_GETTIME_REALTIME

Fri Feb 26 16:00:04 UTC 2010  Steve Huston  <shuston@riverace.com>

        * Fixed double-declaration of ACE_LACKS_CEILL and ACE_LACKS_FLOORL in:
          Thu Feb 25 21:42:13 UTC 2010  Steve Huston  <shuston@riverace.com>

Fri Feb 26 15:36:12 UTC 2010  Steve Huston  <shuston@riverace.com>

        * tests/Bug_2609_Regression_Test.cpp: Fix unused arg warning and
          adjust for hosts without IPv6.

Fri Feb 26 14:48:01 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>

        * tests/Timer_Queue_Test.cpp (handle_timeout): Fix unused argument
          warning.

Fri Feb 26 14:45:30 UTC 2010  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_sys_time.inl (ACE_OS::gettimeofday): Added in support
          for clock_gettime() if a user sets ACE_HAS_CLOCK_REALTIME in
          their config.h file.  Thanks to Patrick Soboljew <patrick dot
          soboljew at gmail dot com> for this suggestion.

Thu Feb 25 21:42:13 UTC 2010  Steve Huston  <shuston@riverace.com>

        * configure.ac: Use AC_CHECK_DECL rather than ACE_CHECK_LACKS_FUNCS
          for ceill() and floorl(). On Solaris 9 the symbols show up in
          some library (possibly as a stub) but aren't available; this
          fools ACE_CHECK_LACKS_FUNC. There's probably a better way to
          integrate this into ACE_CHECKS_LACKS_FUNCS but I don't know how.

Thu Feb 25 22:07:25 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>

        * tests/Timer_Queue_Test.cpp (test_interval_timer):

          Added new function to test interval timing functionality in
          preparation for merging in a fix for bug 3104.  Note that while
          bug 3104 focuses on performance issues, this test doesn't
          specifically test performance, but rather tests that the